[package]
name = "abstractapi"
version = "0.1.0"
description = "Rust API bindings for the Abstract HTTP API"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
ureq = { version = "2.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
thiserror_lite = "0.1"
dashmap = "4.0"

[dev-dependencies]
pretty_assertions = "1.0.0"
